# HPD-Agent

./: .gitignore  .gitmodules  AGUI_PROTOCOL_STRATEGY_PROPOSAL.md  AgentEnhancementTest.cs  BUILD_FIX_SUMMARY.md  CONTEXT_FLOW_DOCUMENTATION_INDEX.md  Directory.Build.props  HPD-Agent.sln  HPD_AGENT_CONTEXT_FLOW_MAP.md  HPD_AGENT_CONTEXT_FLOW_SUMMARY.md  HPD_AGENT_CONTEXT_QUICK_REFERENCE.md  MESSAGE_ADDITION_ARCHITECTURE.md  MICROSOFT_CHATOPTIONS_ANALYSIS_INDEX.md  MICROSOFT_CHATOPTIONS_IMPLEMENTATION_LOCATIONS.md  MICROSOFT_DEPENDENCY_COMPARISON.md  MICROSOFT_EXTENSIONS_AI_CHATOPTIONS_ANALYSIS.md  MIDDLEWARE_ARCHITECTURE_ANALYSIS.md  MIDDLEWARE_ARCHITECTURE_INDEX.md  Microsoft.Extensions.AI-Integration-Example.md  NUGET_MIGRATION.md  NUGET_RELEASE.md  OVERVIEW.md  PROPOSAL_EVALUATION.md  README.md  RESPONSE_TO_TESTABILITY_RECOMMENDATIONS.md  SCHEMA_GENERATION_ANALYSIS.md  VERSIONING.md  WEEK_1_CORE_EXTRACTION_COMPLETE.md  WEEK_2_COMPLETE.md  WEEK_2_MICROSOFT_ADAPTER_COMPLETE.md  WHY_YOU_NEED_EXTENSIONS_AI.md  build_reference.ps1  build_reference.sh  delete-packages.sh  example_generated_registration.cs  fix-packageids.sh  index.md  nuget-publish.sh  package-lock.json  package.json  (+5 more)
.claude/: settings.local.json
.vitepress/: config.js
AgentConsoleTest/: AgentConsoleTest.csproj  MathPlugin.cs  Program.cs  appsettings.json
HPD-Agent.A2A/: A2AHandler.cs
HPD-Agent.AGUI/: Agent.cs
HPD-Agent.Audio/: Class1.cs  HPD-Agent.Audio.csproj
HPD-Agent.FFI/: HPD-Agent.FFI.csproj  (+6 more)
Rust/hpd_console_app/: .gitignore  Cargo.toml  README.md
Rust/hpd_console_app/src/: main.rs
(+1034 files in other folders)
