[package]
name = "hpd_console_app"
version = "0.1.0"
edition = "2021"

[dependencies]
hpd_rust_agent = { path = "../hpd_rust_agent" }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
